--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shahab's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1>Welcome to Shahab's Website</h1>
+        <p>Amazing projects and creativity await!</p>
+    </header>
+
+    <section>
+        <h2>About Me</h2>
+        <p>Hi, I'm Shahab, a passionate developer exploring web technologies.</p>
+    </section>
+
+    <button onclick="showMessage()">Click Me!</button>
+
+    <footer>
+        <p>© 2025 Shahab. All Rights Reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
